--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 
 .profile-list {
 	width: 300px;
-	background-color: #efefef;
+	background-color: #ffffff;
 	border-radius: 12px;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 	padding: 10px 20px 20px 20px;
@@ -44,18 +44,20 @@ h1 {
 	align-items: center;
 	justify-content: space-between;
 	padding: 5px;
-	border: 2px solid #000;
-	border-radius: 13px;
 	margin-bottom: 10px;
 	cursor: pointer;
+	border: 3px thin #656565;
+	border-radius: 13px;
+	border: 1px black solid;
+	background: #ffffff;
+	box-shadow: 8px 8px 60px #ededed, -8px -8px 60px #ffffff;
 }
 
 .profile-image {
 	border-radius: 50%;
 	width: 50px;
 	height: 50px;
-	margin-left: 5px;
-	margin-right: 5px;
+	margin: 5px;
 }
 
 .delete-button {
