--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,12 @@
 	justify-content: center;
 	align-items: start;
 	height: max-content;
-	background-color: #f0f0f0;
+	background-color: #ffffff;
 }
 
 .profile-list {
-	width: 300px;
+	width: 340px;
 	background-color: #ffffff;
-	border-radius: 12px;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 	padding: 10px 20px 20px 20px;
 }
 
@@ -45,12 +43,10 @@ h1 {
 	justify-content: space-between;
 	padding: 5px;
 	margin-bottom: 10px;
-	cursor: pointer;
-	border: 3px thin #656565;
 	border-radius: 13px;
-	border: 1px black solid;
+	border: 2px black solid;
 	background: #ffffff;
-	box-shadow: 8px 8px 60px #ededed, -8px -8px 60px #ffffff;
+	cursor: pointer;
 }
 
 .profile-image {
