--- a/src/App.css
+++ b/src/App.css
@@ -6,22 +6,28 @@
 	background-color: #ffffff;
 }
 
+.header {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.logo-text {
+	font-size: 40px;
+	color: #1f60c0;
+	font-weight: bolder;
+	font-family: sans-serif;
+	margin: 5px 0px 15px 0px;
+}
+
+.logo-text span {
+	color: #000000;
+}
+
 .profile-list {
 	width: 340px;
 	background-color: #ffffff;
 	padding: 10px 20px 20px 20px;
-}
-
-h1 {
-	text-align: center;
-	font-size: 24px;
-	margin-bottom: 20px;
-}
-
-.logo-container {
-	display: flex;
-	justify-content: center;
-	align-items: center;
 }
 
 .logo {
