--- a/src/App.css
+++ b/src/App.css
@@ -99,7 +99,7 @@
 	justify-content: center;
 	align-items: center;
 	padding: 15px;
-	border: 2px dashed #ccc;
+	border: 2px dashed #707070;
 	border-radius: 12px;
 	margin-top: 10px;
 	cursor: pointer;
@@ -108,7 +108,7 @@
 .add-profile button {
 	background: none;
 	border: none;
-	color: #888;
+	color: #707070;
 	font-size: 16px;
 	cursor: pointer;
 }
