--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,31 @@
 	height: 80px;
 	margin-bottom: 10px;
 }
+.tooltip {
+	position: relative;
+}
+
+.tooltip .tooltiptext {
+	visibility: hidden;
+	width: 120px;
+	background-color: #7e7e7e;
+	color: #fff;
+	text-align: center;
+	border-radius: 6px;
+	padding: 5px 0;
+	position: absolute;
+	z-index: 1;
+	top: 105%; /* Position the tooltip below the text */
+	left: 50%;
+	margin-left: -80px; /* Center the tooltip */
+	opacity: 0;
+	transition: opacity 0.3s 0.1s;
+}
+
+.tooltip:hover .tooltiptext {
+	visibility: visible;
+	opacity: 1;
+}
 
 .outreach-messages-button {
 	display: flex;
